--- a/IPDFCameraViewController/CHCardScanViewController.storyboard
+++ b/IPDFCameraViewController/CHCardScanViewController.storyboard
@@ -21,16 +21,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCAN BUSINESS CARD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RfT-Bc-t45">
-                                <rect key="frame" x="0.0" y="20" width="375" height="50"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dw5-Dw-cQp">
+                                <rect key="frame" x="0.0" y="20" width="375" height="64"/>
+                                <subviews>
+                                    <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCAN BUSINESS CARD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RfT-Bc-t45">
+                                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="nP5-Sn-wTS"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="20"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="nP5-Sn-wTS"/>
+                                    <constraint firstAttribute="bottom" secondItem="RfT-Bc-t45" secondAttribute="bottom" id="8aD-6T-Nvf"/>
+                                    <constraint firstAttribute="height" constant="64" id="Qc8-hj-Cm7"/>
+                                    <constraint firstItem="RfT-Bc-t45" firstAttribute="leading" secondItem="Dw5-Dw-cQp" secondAttribute="leading" id="RtJ-hR-gU6"/>
+                                    <constraint firstItem="RfT-Bc-t45" firstAttribute="top" secondItem="Dw5-Dw-cQp" secondAttribute="top" constant="20" id="TVp-mS-8Rr"/>
+                                    <constraint firstAttribute="trailing" secondItem="RfT-Bc-t45" secondAttribute="trailing" id="hIa-AM-jh0"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="20"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GCS-Ur-8wm" customClass="IPDFCameraViewController">
                                 <rect key="frame" x="0.0" y="70" width="375" height="597"/>
                                 <subviews>
@@ -115,19 +128,13 @@
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="GCS-Ur-8wm" secondAttribute="trailing" id="QV5-lk-X0M"/>
-                            <constraint firstItem="GCS-Ur-8wm" firstAttribute="top" secondItem="RfT-Bc-t45" secondAttribute="bottom" id="Sxe-bu-zBI"/>
+                            <constraint firstAttribute="trailing" secondItem="Dw5-Dw-cQp" secondAttribute="trailing" id="SBf-yp-XGq"/>
+                            <constraint firstItem="Dw5-Dw-cQp" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="SMW-z3-FG0"/>
+                            <constraint firstItem="Dw5-Dw-cQp" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="Spn-Cm-1Sr"/>
                             <constraint firstItem="GCS-Ur-8wm" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="U2w-WZ-lEB"/>
-                            <constraint firstItem="RfT-Bc-t45" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="UtT-JM-zkk"/>
-                            <constraint firstItem="RfT-Bc-t45" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="Uxh-YB-NAw"/>
-                            <constraint firstAttribute="trailing" secondItem="RfT-Bc-t45" secondAttribute="trailing" id="iHU-9P-exN"/>
-                            <constraint firstItem="GCS-Ur-8wm" firstAttribute="leading" secondItem="RfT-Bc-t45" secondAttribute="trailing" constant="-600" id="j8T-C9-6oo"/>
+                            <constraint firstItem="GCS-Ur-8wm" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="50" id="l2g-5w-cNR"/>
                             <constraint firstItem="GCS-Ur-8wm" firstAttribute="bottom" secondItem="2fi-mo-0CV" secondAttribute="top" id="rqF-2Q-0qr"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="j8T-C9-6oo"/>
-                            </mask>
-                        </variation>
                         <connections>
                             <outletCollection property="gestureRecognizers" destination="UOe-eu-aHA" appends="YES" id="hau-7G-zgK"/>
                         </connections>
@@ -137,6 +144,7 @@
                         <outlet property="controlsView" destination="uJ6-Em-RcD" id="Fqo-8K-obs"/>
                         <outlet property="focusIndicator" destination="ngc-U5-0Sq" id="WwM-0U-gCy"/>
                         <outlet property="titleLabel" destination="RfT-Bc-t45" id="BeM-wN-7jN"/>
+                        <outlet property="titleView" destination="Dw5-Dw-cQp" id="EPw-cD-NmT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
